# nopasanada

./: .gitignore  README.md  main.py  main2.py  pyproject.toml  test.py
data/: members.db
data/backups/: members.db
data/dev/: members.db
outbound/: message_021616.html  message_04e53a.html  message_07d140.html  message_084c9d.html  message_0a68d3.html  message_0aa6fa.html  message_0c12c9.html  message_0d1270.html  message_0dfdfb.html  message_0f9782.html  message_158cfd.html  message_17640b.html  message_1a29cb.html  message_281312.html  message_349f7d.html  message_34b10e.html  message_398da3.html  message_3c4f8b.html  message_3e7609.html  message_3ecea9.html  message_43a5cf.html  message_4769bb.html  message_4b268d.html  message_4d7467.html  message_4fa4a0.html  message_513d66.html  message_57b1f5.html  message_58eff8.html  message_596bf2.html  message_5bee67.html  message_5e3e11.html  message_61a4e0.html  message_624272.html  message_6391ea.html  message_64b97f.html  message_6afbd9.html  message_78cf9f.html  message_7df856.html  message_7e719e.html  message_7e8e3c.html  (+30 more)
security/: ca-key.pem  ca.pem  ca.srl  cert-key.pem  cert.csr  cert.pem  fullchain.pem  key.pem
src/: nopasanada.py  utils.py
static/: dashboard.css  dashboard.js
templates/: acceso.html  acerca.html  alerta.html  base_page.html  bienvenida.html  codigo.html  dashboard.html  invitacion_a_landing.html  log.html  mic copy 2.html  mic-2.html  mic.html  rec-2.html  rec-3.html  redirect.html  reg-2.html  reg-3.html  reg.html  regular copy 2.html  regular copy.html  regular.html  regular3.html
(+56 files in other folders)
